--- a/_posts/2008-05-01-cpc.md
+++ b/_posts/2008-05-01-cpc.md
@@ -4,7 +4,7 @@ title: "Structural reinforcement in a spring-block model of stress-induced fract
 date:   2020-05-22 14:14:36 +0800
 categories: publications
 taxomomy: publications
-tags: fracture propagation, fragmentation, Discrete element modeling, Reinforcement, Lattice models
+tags: "fracture propagation", "fragmentation", "Discrete element modeling", "Reinforcement", "Lattice models"
 ---
 ### Abstract
 
