--- a/_posts/2009-01-01-ijmpc.md
+++ b/_posts/2009-01-01-ijmpc.md
@@ -1,10 +1,10 @@
 ---
 layout: single
-title: "EFFECT OF MEMORY AND REINFORCEMENT ON THE PROPAGATION AND MORPHOLOGY OF FRACTURE IN A TWO-DIMENSIONAL MASS-SPRING SYSTEM"
+title: "Effect of memory and reinforcement on the propagation and morphology of fracture in a two-dimensional mass-spring system"
 date:   2020-05-22 14:14:36 +0800
 categories: publications
 taxomomy: publications
-tags: fracture propagation, fragmentation, Discrete element modeling, Reinforcement, Lattice models
+tags: "fracture propagation", "fragmentation", "Discrete element modeling", "Reinforcement", "Lattice models"
 ---
 ### Abstract
 
