--- a/_posts/2008-05-01-cpc.md
+++ b/_posts/2008-05-01-cpc.md
@@ -12,3 +12,5 @@ excerpt: "We present a mechanism-based model of fracture propagation in a two-di
 ![Snapshots of the tearing process for a lattice with a random distribution of reinforcements (Fext = 0.35).]({{ site.url }}{{ site.baseurl }}/assets/images/cpc.png)
 
 **Abstract**. We present a mechanism-based model of fracture propagation in a two-dimensional elastic sheet subjected to biaxial stretching. The time evolution of lattice stretching is formulated using a set of coupled nonlinear differential equations describing the network dynamics of masses connected by springs. We show that reinforcement based on a Gaussian spatial distribution of failure thresholds is effective in hindering tear propagation, that is, it delays the onset of breakage and reduces the total fractured sites at equilibrium time. The method presented here is general—it can incorporate any type of load distribution and test any reinforcement procedures.
+
+Full paper can be downloaded [here]({{ site.url }}{{ site.baseurl }}/assets/docs/esleta_cpc_2008.pdf)
