--- a/_posts/2008-05-01-cpc.md
+++ b/_posts/2008-05-01-cpc.md
@@ -7,6 +7,7 @@ categories:
 tags: [Fracture propagation, Fragmentation, Discrete element modeling, Reinforcement, Lattice models]
 mathjax: "true"
 excerpt: "We present a mechanism-based model of fracture propagation in a two-dimensional elastic sheet subjected to biaxial stretching."
+teaser: /assets/images/cpc.png
 ---
 
 ![Snapshots of the tearing process for a lattice with a random distribution of reinforcements (Fext = 0.35).]({{ site.url }}{{ site.baseurl }}/assets/images/cpc.png)
