Edited teaser images

--- a/_posts/2008-05-01-cpc.md
+++ b/_posts/2008-05-01-cpc.md
@@ -2,12 +2,12 @@
 layout: single
 title: "Structural reinforcement in a spring-block model of stress-induced fracture propagation"
 date:   2008-05-01 14:14:36 +0800
-categories: 
-  - publications
-tags: [Fracture propagation, Fragmentation, Discrete element modeling, Reinforcement, Lattice models]
+categories: publications
 mathjax: "true"
 excerpt: "We present a mechanism-based model of fracture propagation in a two-dimensional elastic sheet subjected to biaxial stretching."
-teaser: /assets/images/cpc.png
+header:
+	teaser: /assets/images/cpc.png
+tags: [Fracture propagation, Fragmentation, Discrete element modeling, Reinforcement, Lattice models]
 ---
 
 ![Snapshots of the tearing process for a lattice with a random distribution of reinforcements (Fext = 0.35).]({{ site.url }}{{ site.baseurl }}/assets/images/cpc.png)
