added banner to rappler page

--- a/_posts/2020-03-04-congress.md
+++ b/_posts/2020-03-04-congress.md
@@ -2,6 +2,8 @@
 layout: single
 header:
   teaser: /assets/images/Fin_17th_Mod.png
+  og_image: /assets/images/rappler.png
+  caption: "Photo credit: [**Th PH Chronicles**](http://www.thephchronicles.com/)"
 title: "Capturing Collaboration and Legislative Success in the Coauthorship Network of the Philippine House of Representatives"
 date:   2019-07-23 16:50:00 +0800
 categories: projects
