--- a/_posts/2020-03-04-congress.md
+++ b/_posts/2020-03-04-congress.md
@@ -5,7 +5,9 @@ header:
   image: /assets/images/congress.jpg
   caption: "Photo credit: [**Rappler**](https://www.rappler.com/)"  
 title: "Capturing Collaboration and Legislative Success in the Coauthorship Network of the Philippine House of Representatives"
-author: [Carmelita Esclanda, George Allan Esleta]
+author: 
+  - Carmelita Esclanda
+  - George Allan Esleta
 date:   2020-03-04 16:50:00 +0800
 categories: projects
 mathjax: "true"
