--- a/_posts/2020-03-04-congress.md
+++ b/_posts/2020-03-04-congress.md
@@ -5,9 +5,6 @@ header:
   image: /assets/images/congress.jpg
   caption: "Photo credit: [**Rappler**](https://www.rappler.com/)"  
 title: "Capturing Collaboration and Legislative Success in the Coauthorship Network of the Philippine House of Representatives"
-author: 
-  - Carmelita Esclanda
-  - George Allan Esleta
 date:   2020-03-04 16:50:00 +0800
 categories: projects
 mathjax: "true"
@@ -16,7 +13,7 @@ tags: [network science, social network analysis, co-authorship network, bipartit
 ---
 
 ## AUTHORS
-Carmelita Esclanda (cesclanda@aim.edu) and [George Allan Esleta](https://gpsleta.github.io/) (gesleta@aim.edu)
+[Carmelita Esclanda](https://www.linkedin.com/in/carmelita-esclanda-566b2946/) (cesclanda@aim.edu) and [George Allan Esleta](https://gpsleta.github.io/) (gesleta@aim.edu)
 
 ## EXECUTIVE SUMMARY
 A bill filed in the Philippine House of Representatives (HOR) can have one or more authors. This network of co-authors can shed information about the underlying communities and collaborations among congressmen. Bill authorship data for the 17th and 18th Congress were obtained from the [HOR’s Legislative Information System](http://www.congress.gov.ph/legis) to map out the bill co-authorship network, and the Louvain method was used to detect the underlying community structure. The communities were found to be consistent with political bloc membership and not with other demographic factors such as gender and regional affiliation. The betweenness centrality of a congressman is correlated with the number of co-authored bills that reached the third and final reading. Hence, “connectedness” by virtue of betweenness centrality, not political prominence, can be a proxy for legislative success and the capacity for a representative to pass more bills on the floor.
@@ -38,7 +35,7 @@ Typical social network studies rely on survey questionnaires and interviews. How
 ## METHODOLOGY
 
 ### Construction of Legislative Co-authorship graph
-The bipartite graph was then projected onto the congressmen nodes C  to construct the weighted, undirected bill co-authorship graph. A connection exists between two congressmen if they co-authored at least one bill together, with the weight of the connection equal to the number of co-authored bills. The resulting co-authorship networks for the 17th and 18th Congress are shown in [Figure 1](#fig1) and [Figure 2](#fig2). 
+The bipartite graph was then projected onto the congressmen nodes C to construct the weighted, undirected bill co-authorship graph. A connection exists between two congressmen if they co-authored at least one bill together, with the weight of the connection equal to the number of co-authored bills. The resulting co-authorship networks for the 17th and 18th Congress are shown in [Figure 1](#fig1) and [Figure 2](#fig2). 
 
 ![17th]({{ site.url }}{{ site.baseurl }}/assets/images/Fin_17th_Mod.png)
 <a id="fig1"></a> 
@@ -52,13 +49,12 @@ The bipartite graph was then projected onto the congressmen nodes C  to construc
 
 ### Community Structure
 
+To identify the underlying community structures in the co-authorship network, community detection was implemented using the Louvain algorithm created by Blondel et al. The optimal communities were then identified by maximizing the modularity, which measures the density of links inside communities as compared to links between communities. Shown in [Figure 3](#fig3) are the detected communities, with the nodes colored based on congressmen attributes such as gender, regional affiliation, and bloc membership. It is evident that the formation of communities in the co-authorship network are primarily based on political affiliation and are not driven by other demographic factors such as gender and regional affiliation. 
+
 ![17th]({{ site.url }}{{ site.baseurl }}/assets/images/Fin_17th_Bloc.png)
 ![18th]({{ site.url }}{{ site.baseurl }}/assets/images/Fin_18th_bloc.png)
 <a id="fig3"></a> 
 #### Figure 3. Community structure of the co-authorship network of the 17th and 18th Congress. Nodes are colored based on congressmen's political affiliation. Figure drawn using Gephi.
-
-To identify the underlying community structures in the co-authorship network, community detection was implemented using the Louvain algorithm created by Blondel et al. The optimal communities were then identified by maximizing the modularity, which measures the density of links inside communities as compared to links between communities. Shown in [Figure 3](#fig3) are the detected communities, with the nodes colored based on congressmen attributes such as gender, regional affiliation, and bloc membership. It is evident that the formation of communities in the co-authorship network are primarily based on political affiliation and are not driven by other demographic factors such as gender and regional affiliation.  
-
 
 ### Centrality and Legislative Success
 
