--- a/_posts/2019-12-05-airbnbnb.md
+++ b/_posts/2019-12-05-airbnbnb.md
@@ -9,12 +9,102 @@ mathjax: "true"
 tags: [big data, cloud computing, frequent itemset mining, association rule mining, recommender system, Airbnb]
 ---
 
+## Authors
+Oonre Advincula-Go (oadvinculago@aim.edu), Richard Anciado (ranciado@aim.edu), George Allan Esleta (gesleta@aim.edu), Kevin Anthony Sison (kssison@aim.edu)
+
 ## Abstract
 
-![Title]({{ site.url }}{{ site.baseurl }}/assets/images/BDCC_Poster_FINAL_2/Slide13.png)
-![]({{ site.url }}{{ site.baseurl }}/assets/images/BDCC_Poster_FINAL_2/Slide7.png)
-![]({{ site.url }}{{ site.baseurl }}/assets/images/BDCC_Poster_FINAL_2/Slide8.png)
-![]({{ site.url }}{{ site.baseurl }}/assets/images/BDCC_Poster_FINAL_2/Slide9.png)
-![]({{ site.url }}{{ site.baseurl }}/assets/images/BDCC_Poster_FINAL_2/Slide10.png)
-![]({{ site.url }}{{ site.baseurl }}/assets/images/BDCC_Poster_FINAL_2/Slide11.png)
-![]({{ site.url }}{{ site.baseurl }}/assets/images/BDCC_Poster_FINAL_2/Slide12.png)
+The global travel and tourism industry contributes over $8.8 trillion and 319 million jobs to the global economy. Affordable travel has created a boom for some economies, with over 1.4 billion international travelers, but has also brought its own set of challenges. For travelers, it is all about identifying the next best destination. **airbnbnb** solves this dilemma by suggesting the user's next destination based on his travel history. It leverages the transactions of other Airbnb users to provide collaborative-based destination recommendations. It uses **125 Gigabytes** of data from [www.insideairbnb.com](http://www.insideairbnb.com),  an independent, non-commercial site that allows researchers to explore how Airbnb is used in cities around the world. The *Inside Airbnb* dataset contains reviews of **26.7 million Airbnb users**, and covers listings from **101 cities** across **30 countries**. Two types of recommender systems were explored: one uses association rules, while the other is a collaborative-based recommender system implemented using Alternating Least Squares (ALS) algorithm. The collaborative-based destination recommender was successful in providing destination suggestions, having achieved a root mean square error of 0.019 for city recommendations, and 0.017 for country recommendations.  
+
+## DATA DESCRIPTION
+
+The dataset was obtained from `www.insideairbnb.com`, an independent, non-commercial site that allows researchers to explore how Airbnb is used in cities around the world. Data from _Inside Airbnb_ was scraped from publicly available information from the Airbnb site (`airbnb.com`). The total size of the dataset is **125 Gigabytes**.
+
+The Inside Airbnb dataset contains reviews of **26.7 million Airbnb users**, and covers listings from **101 cities** across **30 countries**.
+
+## METHODOLOGY
+
+Their Airbnbnb destination recommender system leverages on the reviews provided by the Airbnb guests. The reviews are contained in comma-separated value (CSV) files (`reviews.csv.gz`).
+
+[Table 1](#table1) shows the data description of the `reviews.csv.gz` file:
+
+<a id="table1"></a> 
+#### Table 1. Data dictionary
+<table>
+<thead>
+<tr>
+<th>Data</th>
+<th>Data type</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><code>listing_id</code></td>
+<td>INT</td>
+<td>Unique ID of the listing</td>
+</tr>
+<tr>
+<td><code>id</code></td>
+<td>INT</td>
+<td>Unique ID of the review</td>
+</tr>
+<tr>
+<td><code>date</code></td>
+<td>DATE</td>
+<td>Review date</td>
+</tr>
+<tr>
+<td><code>reviewer_id</code></td>
+<td>INT</td>
+<td>Unique ID of the reviewer</td>
+</tr>
+<tr>
+<td><code>reviewer_name</code></td>
+<td>VARCHAR</td>
+<td>First name of the reviewer</td>
+</tr>
+<tr>
+<td><code>comments</code></td>
+<td>VARCHAR</td>
+<td>Reviewer&#39;s comments on the listing</td>
+</tr>
+</tbody>
+</table>
+
+![Methodology](/assets/images/Methodology.png)
+
+The general workflow for creating the destination recommender as shown in Figure 1 involves the following steps. Each step will be discussed in detail in the succeeding sections.
+
+1. Get list of `review.csv.gz` filepaths
+2. Create vertical transaction database
+3. Convert vertical transaction database to horizontal transaction database
+4. Association rule mining
+5. Association-rule based recommender system
+6. Collaborative-based recommender system
+
+## RESULTS
+
+### A. City Association Rules
+
+!['Ottawa'](/assets/images/assoc_rules_ottawa.png)
+#### Figure 4. The association rule {Quebec, Montreal Toronto} ->  Ottawa has a 49x lift. 
+
+!['Stockholm'](/assets/imagesassoc_rules_stockholm.png)
+#### Figure 5. The association rule {Oslo, Copenhagen} -> Stockhol has a 32x lift. 
+
+### B. Country Association Rules
+
+!['Austria'](/assets/assoc_rules_austria.png)
+#### Figure 6. The association rule {Czech Republic, Germany} -> Austria has a 10.4x lift. 
+
+!['France'](/assets/assoc_rules_france.png)
+#### Figure 7. The association rule {Netherlands, Spain, Italy} -> France has a 3.9x lift. 
+
+## INSIGHTS AND CONCLUSION
+
+Leveraging millions of user reviews allows **airbnbnb** to generate relevant recommendations based on travel history. A closer look at the recommendations reveal that it often suggests logical pairs of destinations. For example, a city recommender will recommend another city within the same country. Or a country recommender will recommend a neighboring country within the same region. 
+
+The collaborative-based destination recommendation proved to be successful in recommending new destinations to users, having achieves a low root mean square error (RMSE) of 0.019 for city recommendations and 0.017 for country recommendations.
+
+While the results may seem intuitive, access to more user and travel (i.e. more countries and cities) data will yield more robust recommender systems. This system presents a good foundation to build on.
