--- a/_posts/2019-12-05-airbnbnb.md
+++ b/_posts/2019-12-05-airbnbnb.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 header:
-  teaser: /assets/images/paris.png 
+  teaser: /assets/images/paris.jpg 
   image: /assets/images/AdobeStock_265268314.jpeg
 title: "AirBnBnB: Where is Your Next Destination"
 date:   2019-12-05 16:50:00 +0800
