--- a/_posts/2020-03-04-congress.md
+++ b/_posts/2020-03-04-congress.md
@@ -8,6 +8,7 @@ title: "Capturing Collaboration and Legislative Success in the Coauthorship Netw
 date:   2020-03-04 16:50:00 +0800
 categories: projects
 mathjax: "true"
+linkedin: "true"
 excerpt: "Bill authorship data for the 17th and 18th Congress were obtained from the [HOR’s Legislative Information System](http://www.congress.gov.ph/legis) to map out the bill co-authorship network, and the Louvain method was used to detect the underlying community structure"
 tags: [network science, social network analysis, co-authorship network, bipartite graph, House of Representatives, Philippines]
 ---
