added dataviz category

--- a/_posts/2019-05-01-dvs.md
+++ b/_posts/2019-05-01-dvs.md
@@ -4,7 +4,7 @@ header:
   teaser: /assets/images/pictogram.png
 title: "[Infographic] Banking the Unbanked: The Road to Financial Inclusion in the Philippines"
 date:   2019-05-01 16:50:00 +0800
-categories: projects
+categories: [projects, dataviz]
 mathjax: "true"
 tags: [financial inclusion, Philippines, data visualization, data storytelling]
 ---
