--- a/_posts/2009-01-01-ijmpc.md
+++ b/_posts/2009-01-01-ijmpc.md
@@ -12,7 +12,7 @@ excerpt: "We investigate the interplay of damage accumulation and structural rei
 
 tags: [Fracture, fatigue, damage accumulation, memory, reinforcement]
 ---
-[George Allan Esleta]({{ site.url }}{{ site.baseurl }}) and [Christopher Monterola]('https://www.chrismonterola.net/')<br/>
+[George Allan Esleta]({{ site.url }}{{ site.baseurl }}) and [Christopher Monterola](https://www.chrismonterola.net/)<br/>
 *International Journal of Modern Physics C* 20.07 (2009): 1049-1062.<br/>
 [https://doi.org/10.1142/S0129183109014187](https://doi.org/10.1142/S0129183109014187)
 
