--- a/_posts/2008-05-01-cpc.md
+++ b/_posts/2008-05-01-cpc.md
@@ -6,7 +6,8 @@ categories:
   - publications
 mathjax: "true"
 excerpt: "We present a mechanism-based model of fracture propagation in a two-dimensional elastic sheet subjected to biaxial stretching."
-teaser: /assets/images/cpc.png
+header:
+  teaser: /assets/images/cpc.png
 tags: [Fracture propagation, Fragmentation, Discrete element modeling, Reinforcement, Lattice models]
 ---
 [George Allan Esleta]({{ site.url }}{{ site.baseurl }}) and [Christopher Monterola](https://www.chrismonterola.net/)<br/>
